fix boutons invisibles

--- a/public/style.css
+++ b/public/style.css
@@ -1953,7 +1953,7 @@ body.backoffice footer {
   }
 }
 
-main.acceuilBackoffice articl {
+main.acceuilBackoffice article {
   overflow-y: hidden;
 }
 main.acceuilBackoffice {
